[gd_scene format=3 uid="uid://bbt0ydoan2173"]

[ext_resource type="Script" uid="uid://k2o6qbjgw8nj" path="res://Scripts/menu_principal.gd" id="1_ul6ys"]
[ext_resource type="Texture2D" uid="uid://c4p15ma5qhpg2" path="res://Assets/Menu/MenuJogo3.png" id="2_ns3he"]
[ext_resource type="FontFile" uid="uid://bjp6li56in5vp" path="res://Assets/Menu/Eater-Regular.ttf" id="3_fa1tu"]
[ext_resource type="AudioStream" uid="uid://cux6e4yapl5jl" path="res://Assets/Sons/Interface/touch.wav" id="4_7f1x0"]
[ext_resource type="AudioStream" uid="uid://dcme4xkk170p7" path="res://Assets/Sons/Musica/Intro.ogg" id="5_y8dk8"]

[sub_resource type="LabelSettings" id="LabelSettings_a6518"]
font = ExtResource("3_fa1tu")
font_size = 71

[node name="MenuPrincipal" type="Control" unique_id=1735399743]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ul6ys")
cena_do_jogo = "uid://tfai8i3hmmv4"
cena_dos_creditos = "uid://d1ohrk405xgge"

[node name="TextureRect" type="TextureRect" parent="." unique_id=213042363]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ns3he")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="." unique_id=1122614830]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=467112375]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -7.0
offset_right = 64.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9
metadata/_edit_use_anchors_ = true

[node name="BtnJogar" type="Button" parent="VBoxContainer" unique_id=817899639]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jogar"

[node name="BtnCreditos" type="Button" parent="VBoxContainer" unique_id=1804029712]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Cr√©ditos"

[node name="BtnSair" type="Button" parent="VBoxContainer" unique_id=1726374129]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sair"

[node name="Label" type="Label" parent="." unique_id=493350194]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.5
offset_top = 99.0
offset_right = 220.5
offset_bottom = 232.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "The Rogue"
label_settings = SubResource("LabelSettings_a6518")
metadata/_edit_use_anchors_ = true

[node name="SfxHover" type="AudioStreamPlayer" parent="." unique_id=1990971555]
stream = ExtResource("4_7f1x0")
volume_db = -25.0

[node name="MusicaFundo" type="AudioStreamPlayer" parent="." unique_id=1851055726]
stream = ExtResource("5_y8dk8")
volume_db = -18.0
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/BtnJogar" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BtnJogar" to="." method="_on_btn_jogar_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/BtnCreditos" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BtnCreditos" to="." method="_on_btn_creditos_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/BtnSair" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BtnSair" to="." method="_on_btn_sair_pressed"]
